[package]
name = "jam"
version = "0.1.0"
authors = ["Michael Shaw <michaeljshaw@gmail.com>"]

[dependencies]
glium = "0.16"
glutin = "0.7"
image = "0.12"
cgmath = "0.12"
fnv = "1.0"
notify = "3.0"
time = "0.1"
rusttype = "0.2"


[[example]]
name = "commands"
path = "examples/commands/main.rs"

[[example]]
name = "text"
path = "examples/text/main.rs"

[[example]]
name = "winit"
path = "examples/winit/main.rs"