[package]
name = "jam"
version = "0.1.0"
authors = ["Michael Shaw <michaeljshaw@gmail.com>"]

[dependencies]
gfx = "0.16"
gfx_device_gl = "0.14"
glutin = "0.9"
gfx_window_glutin = "0.17"
image = "0.14"
cgmath = "0.14"
notify = "4.0"
time = "0.1"
rusttype = "0.2"

aphid = { git = "https://github.com/michaelshaw/aphid" }
